fixed full site

--- a/api.html
+++ b/api.html
@@ -204,7 +204,7 @@
 
         <h3 id = "name_header">By Jake</h3><Br>
 
-        <div id = "pwd"  style = "display:none">
+        <div id = "pwd">
             <h2 id = "loginlabel">Login</h2>
                 <label id = "usernamelabel">Username: </label> 
                 <input type = "text" required placeholder = "Enter Username" id = "userName">
@@ -213,7 +213,8 @@
                 <input type = "submit" id = 'submitBtn' onclick = "login()">
         </div>
 
-        <div id = "apiEnter">
+        
+        <div id = "apiEnter"   style = "display:none">
             <div id ="radioButtons">
 
             <label for = "radioA" class = "radioSelect">
